<resources>
    <string name="app_name">MobileAgent</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_login">Sign in</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="forgot_pass_text">Forgot your password?</string>
    <string name="show_pass_text">Show Password</string>
    <string name="sign_in_bt">Sign In</string>
    <string name="error_blank">Blank field is not allowed</string>
    <string name="error_no_internet">Please be connected to internet</string>
    <string name="error_invalid_user">Invalid credentials</string>
    <string name="error_server_connection">Sorry! We\'re unable to connect to the server.</string>
    <string name="wait_text">Please wait...</string>
    <string name="ok_lbl">OK</string>
    <string name="yes_lbl">Yes</string>
    <string name="no_lbl">No</string>
    <string name="message_lbl">Message</string>
</resources>
