<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/carroad" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_margin="50dp"
                android:gravity="center"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/username_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/color_white"
                    android:ems="10"
                    android:hint="@string/username_text"
                    android:inputType="textEmailAddress"
                    android:minHeight="50dp"
                    android:padding="5dp"
                    android:textColor="@color/color_white"
                    android:textColorHint="@color/color_white" />

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/color_white"
                    android:ems="10"
                    android:hint="@string/password_text"
                    android:inputType="textPassword"
                    android:minHeight="50dp"
                    android:padding="5dp"
                    android:textColor="@color/color_white"
                    android:textColorHint="@color/color_white" />

                <CheckBox
                    android:id="@+id/show_pass_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:backgroundTint="@color/color_white"
                    android:buttonTint="@color/color_white"
                    android:foregroundTint="@color/color_white"
                    android:minHeight="50dp"
                    android:text="@string/show_pass_text"
                    android:textColor="@color/color_white" />

                <Button
                    android:id="@+id/sign_in_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/color_sky_blue"
                    android:gravity="center"
                    android:minHeight="50dp"
                    android:text="@string/sign_in_bt"
                    android:textColor="@color/color_white"
                    android:textSize="15dp"
                    android:textStyle="bold" />



                <TextView
                    android:id="@+id/forget_pass_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="#00000000"
                    android:gravity="center"
                    android:minHeight="50dp"
                    android:visibility="gone"
                    android:text="@string/forgot_pass_text"
                    android:textColor="@color/color_white"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>